--- a/src/assets/css/base.styl
+++ b/src/assets/css/base.styl
@@ -7,3 +7,5 @@ body, html
   -webkit-tap-highlight-color: transparent
   background: $color-background
   color: $color-text
+  // 解决 Unable to preventDefault inside passive event listener due to target being t
+  touch-action: none;
