--- a/src/assets/css/icon.styl
+++ b/src/assets/css/icon.styl
@@ -11,6 +11,7 @@
 [class^="icon-"], [class*=" icon-"]
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'music-icon' !important
+  /* 无障碍阅读所需要的，告诉屏幕阅读器不要读这个字符 */
   speak: none
   font-style: normal
   font-weight: normal
@@ -19,6 +20,7 @@
   line-height: 1
 
   /* Better Font Rendering =========== */
+  /* 抗锯齿,展现的图标字体更加好 */
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
